--- a/css/plip.css
+++ b/css/plip.css
@@ -26,12 +26,8 @@ a{
   display: grid;
 }
 
-.single-container, .home-top{
-  padding-top: 128px;
-}
-
-.single-container, .category-container{
-  padding-top: 128px;
+.single-container, .home-top, .category-container{
+  padding-top: 128px!important;
 }
 
 .single-container{
@@ -65,8 +61,13 @@ a{
   box-shadow: 0px 0px 19px -2px rgba(0,0,0,0.24);
 }
 
-.single-container .wp-block-image img{
+.wp-caption{
+  width: 100%!important;
+}
+
+.single-container img{
   width: 100%;
+  height: unset;
 }
 
 .advertisement{
@@ -109,6 +110,10 @@ a{
 
 .sect-commentary .article-item{
   grid-template-columns: 1fr 96px;
+}
+
+.post-categories{
+  border-bottom: 3px solid #000;
 }
 
 .post-categories a{
@@ -218,7 +223,7 @@ footer li{
   }
 
   .article-category{
-    padding-bottom: 64px;
+    padding-bottom: 24px;
   }
 
   .category-container .article-item{
